hphp/hack/test/typecheck/anon17.php.exp
File "anon17.php", line 8, characters 24-29:
Invalid argument (Typing[4110])
File "anon17.php", line 3, characters 51-56:
This is a string
File "anon17.php", line 6, characters 39-39:
It is incompatible with an int
